--- a/index.html
+++ b/index.html
@@ -1,108 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZZTSGLM0ZH"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-ZZTSGLM0ZH');
-</script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MergeScholars</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="assets/logo.png" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #111;
+      color: #fff;
+      text-align: center;
+      padding-top: 100px;
+    }
+    h1 {
+      font-size: 2.5rem;
+    }
+    p {
+      font-size: 1.2rem;
+      margin-bottom: 30px;
+    }
+    .btn {
+      background-color: #0ff;
+      color: #111;
+      padding: 12px 25px;
+      font-size: 1rem;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: 0.3s;
+      text-decoration: none;
+    }
+    .btn:hover {
+      background-color: #0cc;
+    }
+  </style>
 </head>
 <body>
-  <!-- Preloader -->
-  <div id="preloader">
-    <div class="loader"></div>
-  </div>
-
-  <!-- Navbar -->
-  <nav>
-    <div class="logo">MergeScholars</div>
-    <ul>
-      <li><a href="#hero">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#profs">Professors</a></li>
-      <li><a href="#students">Students</a></li>
-      <li><a href="#why">Why Us</a></li>
-    </ul>
-  </nav>
-
-  <!-- Hero -->
-  <section class="hero" id="hero">
-    <h1>Where Students and Scholars Merge</h1>
-    <p>Bridging the gap between learners and academic pioneers</p>
-    <button onclick="scrollToSection('about')">Explore</button>
-  </section>
-
-  <!-- About -->
-  <section id="about">
-    <h2>About MergeScholars</h2>
-    <p>
-      MergeScholars is a global educational platform that connects students with top-tier professors and researchers through interactive Zoom sessions, published insights, and more.
-    </p>
-  </section>
-
-  <!-- Professors Section -->
-  <section id="profs">
-    <h2>Featured Professors</h2>
-    <div class="card-grid">
-      <div class="card">
-        <img src="assets/prof1.jpg" alt="Professor 1" />
-        <h3>Dr. Jane Smith</h3>
-        <p>Astrophysicist – Harvard University</p>
-      </div>
-      <div class="card">
-        <img src="assets/prof2.jpg" alt="Professor 2" />
-        <h3>Dr. Peter Morgan</h3>
-        <p>Quantum Researcher – Yale University</p>
-      </div>
-      <!-- Add more professors here -->
-    </div>
-  </section>
-
-  <!-- Students Section -->
-  <section id="students">
-    <h2>Our Students</h2>
-    <div class="card-grid">
-      <div class="card student">
-        <img src="assets/student1.jpg" alt="Student 1" />
-        <h3>Fatima Rahman</h3>
-        <p>Dhaka, Bangladesh</p>
-      </div>
-      <div class="card student">
-        <img src="assets/student2.jpg" alt="Student 2" />
-        <h3>Alex Johnson</h3>
-        <p>Texas, USA</p>
-      </div>
-      <!-- Add more students -->
-    </div>
-  </section>
-
-  <!-- Why Us -->
-  <section id="why">
-    <h2>Why MergeScholars?</h2>
-    <ul class="why-list">
-      <li>📚 Live Zoom sessions with global professors</li>
-      <li>🌎 Open to students worldwide, completely free</li>
-      <li>🎓 Get certified for participation</li>
-      <li>🧠 Learn cutting-edge science and research</li>
-      <li>💬 Comment, interact, and ask real questions</li>
-    </ul>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 MergeScholars. All rights reserved.</p>
-  </footer>
-
-  <!-- Script -->
-  <script src="script.js"></script>
+  <h1>Welcome to MergeScholars</h1>
+  <p>Empowering students through global academic collaboration.</p>
+  <a href="certificates.html" class="btn">Verify a Certificate</a>
 </body>
 </html>
+
