--- a/index.html
+++ b/index.html
@@ -560,9 +560,9 @@
     <a href="Contact us.html" tabindex="0">Contact Us</a>
   </nav>
   <select id="theme-select" aria-label="Select website theme">
-    <option value="desert" selected>Bonita Desert</option>
-    <option value="light">Luna Bella</option>
-    <option value="dark">Sunora Moon</option>
+    <option value="desert" selected>Desert</option>
+    <option value="light">Light</option>
+    <option value="dark">Dark</option>
   </select>
 </header>
 
