--- a/index.html
+++ b/index.html
@@ -523,6 +523,133 @@
   #part1 .btns button:hover, #part1 .btns button:focus {
     box-shadow: 0 0 14px 3px var(--btn-hover-bg);
   }
+/* ----------- Mobile-specific Fixes & Theme Tweaks ----------- */
+@media (max-width: 600px) {
+  /* Header adjustments */
+  header {
+    flex-direction: column;
+    height: auto;
+    padding: 0.6rem;
+    align-items: flex-start;
+  }
+
+  nav {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+    margin-top: 0.5rem;
+  }
+
+  nav a {
+    margin: 0.3rem 0.6rem;
+    font-size: 0.95rem;
+    font-weight: 600;
+  }
+
+  #theme-select {
+    margin-top: 0.6rem;
+    width: 100%;
+    padding: 0.5rem;
+    font-size: 1rem;
+  }
+
+  /* Hero section */
+  #part1 {
+    padding: 3rem 1rem;
+  }
+
+  #part1 h1 {
+    font-size: 1.6rem;
+    line-height: 1.3;
+  }
+
+  #part1 p {
+    font-size: 1rem;
+    margin-bottom: 1.5rem;
+  }
+
+  .btns {
+    display: flex;
+    flex-direction: column;
+    gap: 0.9rem;
+    align-items: center;
+  }
+
+  #part1 .btns button {
+    width: 90%;
+    margin: 0;
+    padding: 0.9rem 1rem;
+    font-size: 1.05rem;
+    border-radius: 8px;
+  }
+
+  /* About section boxes */
+  #small-boxes {
+    grid-template-columns: 1fr;
+    gap: 1rem;
+  }
+
+  /* Stats section */
+  #stats-grid {
+    grid-template-columns: 1fr;
+    gap: 1rem;
+  }
+
+  .stat-box {
+    padding: 1.2rem;
+  }
+
+  .stat-box .number {
+    font-size: 2rem;
+  }
+
+  /* Reviews */
+  #review-container {
+    padding: 1.5rem 1rem;
+  }
+
+  #review-text {
+    font-size: 1rem;
+    line-height: 1.4;
+  }
+
+  .review-arrow {
+    font-size: 1.5rem;
+  }
+
+  /* Notifications form */
+  #form-box {
+    padding: 1.5rem;
+  }
+
+  form input, #submit-btn {
+    font-size: 1rem;
+    padding: 0.8rem;
+  }
+
+  /* ----------- Theme Improvements (Mobile Only) ----------- */
+  body.theme-desert {
+    --bg-body: #fffdf5;
+    --text-main: #4a3a0f;
+    --btn-bg: #d4a63f;
+    --btn-hover-bg: #b88528;
+  }
+
+  body.theme-dark {
+    --bg-body: #0f0f0f;
+    --text-main: #f1f1f1;
+    --btn-bg: #5555dd;
+    --btn-hover-bg: #7777ff;
+  }
+
+  body.theme-light {
+    --bg-body: #ffffff;
+    --text-main: #111111;
+    --btn-bg: #4a90e2;
+    --btn-hover-bg: #3578c6;
+  }
+}
 
 </style>
 <script>
