--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 </script>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="description" content="MergeScholars – Free academic resources, certificates, and guides for students.">
+<meta name="keywords" content="MergeScholars, free certificates, student resources, educational tools">
+<meta name="author" content="Istiak Ahmed Mozumder">
+<link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 <title>MergeScholars</title>
+  
 <style>
   /* ----------- Fonts and base styles ----------- */
   body {
@@ -1090,4 +1095,5 @@ window.addEventListener('click', function(e){
 </script>
 </body>
 </html>
+
 
